network/cli-OLD.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fabric-tools
  namespace: fabric-tools
spec:
  containers:
    - name: fabrictools
      image: hyperledger/fabric-tools:amd64-1.3.0
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "sleep 48h"]
      volumeMounts:
        # Org1 MSP + TLS
        - mountPath: /fabric/config/crypto/org1/msp/admincerts
          name: peer1-admincert
        - mountPath: /fabric/config/crypto/org1/msp/signcerts
          name: peer1-admin-signcert
        - mountPath: /fabric/config/crypto/org1/msp/keystore
          name: peer1-adminkey
        - mountPath: /fabric/config/crypto/org1/msp/cacerts
          name: peer1-cacert
        - mountPath: /fabric/config/crypto/org1/tls/cacerts
          name: peer1-tls-cacert
        - mountPath: /fabric/config/crypto/org1/tls
          name: peer1-tls
        # Org2 MSP + TLS
        - mountPath: /fabric/config/crypto/org2/msp/admincerts
          name: peer2-admincert
        - mountPath: /fabric/config/crypto/org2/msp/signcerts
          name: peer2-admin-signcert
        - mountPath: /fabric/config/crypto/org2/msp/keystore
          name: peer2-adminkey
        - mountPath: /fabric/config/crypto/org2/msp/cacerts
          name: peer2-cacert
        - mountPath: /fabric/config/crypto/org2/tls/cacerts
          name: peer2-tls-cacert
        - mountPath: /fabric/config/crypto/org2/tls
          name: peer2-tls
        # Org3 MSP + TLS
        - mountPath: /fabric/config/crypto/org3/msp/admincerts
          name: peer3-admincert
        - mountPath: /fabric/config/crypto/org3/msp/signcerts
          name: peer3-admin-signcert
        - mountPath: /fabric/config/crypto/org3/msp/keystore
          name: peer3-adminkey
        - mountPath: /fabric/config/crypto/org3/msp/cacerts
          name: peer3-cacert
        - mountPath: /fabric/config/crypto/org3/tls/cacerts
          name: peer3-tls-cacert
        - mountPath: /fabric/config/crypto/org3/tls
          name: peer3-tls
        # Orderer
        - mountPath: /fabric/config/crypto/orderer/tls/cacerts
          name: orderer-tls-cacert
        # Channel artifacts
        - mountPath: /fabric/config/channel-artifacts
          name: artifacts
        # Scripts (create channel, join peer, install & instantiate chaincode)
        - mountPath: /fabric/config/scripts
          name: scripts
        # Chaincode
        - mountPath: fabric/chaincode
          name: chaincode
        # Docker socket
        - mountPath: /host/var/run/docker.sock
          name: dockersocket
  volumes:
    # Peer1 credentials
    - name: peer1-admincert
      secret:
        secretName: hlf--peer1-admincert
    - name: peer1-admin-signcert
      secret:
        secretName: hlf--peer1-admincert
    - name: peer1-adminkey
      secret:
        secretName: hlf--peer1-adminkey
    - name: peer1-cacert
      secret:
        secretName: hlf--peer1-cacert
    - name: peer1-tls-cacert
      secret:
        secretName: hlf--peer1-tls-cacert
    - name: peer1-tls
      secret:
        secretName: hlf--peer1-tls
    # Peer2 credentials
    - name: peer2-admincert
      secret:
        secretName: hlf--peer2-admincert
    - name: peer2-admin-signcert
      secret:
        secretName: hlf--peer2-admincert
    - name: peer2-adminkey
      secret:
        secretName: hlf--peer2-adminkey
    - name: peer2-cacert
      secret:
        secretName: hlf--peer2-cacert
    - name: peer2-tls-cacert
      secret:
        secretName: hlf--peer2-tls-cacert
    - name: peer2-tls
        secret:
          secretName: hlf--peer2-tls
    # Peer3 credentials
    - name: peer3-admincert
      secret:
        secretName: hlf--peer3-admincert
    - name: peer3-admin-signcert
      secret:
        secretName: hlf--peer3-admincert
    - name: peer3-adminkey
      secret:
        secretName: hlf--peer3-adminkey
    - name: peer3-cacert
      secret:
        secretName: hlf--peer3-cacert
    - name: peer3-tls-cacert
      secret:
        secretName: hlf--peer3-tls-cacert
    - name: peer3-tls
      secret:
        secretName: hlf--peer3-tls
    # Orderer
    - name: orderer-tls-cacert
      secret:
        secretName: hlf--ord1-tls-cacert
    # Channel artifacts (genesis block, channel tx, anchor update txs)
    - name: artifacts
      secret:
        secretName: hlf--artifacts
    # Scripts
    - name: scripts
      secret:
        secretName: hlf--scripts
    # Chaincode
    - name: chaincode
      secret:
        secretName: hlf--chaincode
    # Docker socket
    - name: dockersocket
      hostPath:
        path: /var/run/docker.sock
