network/cli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fabric-tools
  namespace: fabric-tools
spec:
  containers:
    - name: fabrictools
      image: hyperledger/fabric-tools:amd64-1.3.0
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "sleep 48h"]
      volumeMounts:
        # Org1 MSP
        - mountPath: /fabric/config/crypto/org1/msp/admincerts
          name: peer1-admincert
        - mountPath: /fabric/config/crypto/org1/msp/signcerts
          name: peer1-admin-signcert
        - mountPath: /fabric/config/crypto/org1/msp/keystore
          name: peer1-adminkey
        - mountPath: /fabric/config/crypto/org1/msp/cacerts
          name: peer1-cacert
        # Org2 MSP
        - mountPath: /fabric/config/crypto/org2/msp/admincerts
          name: peer2-admincert
        - mountPath: /fabric/config/crypto/org2/msp/signcerts
          name: peer2-admin-signcert
        - mountPath: /fabric/config/crypto/org2/msp/keystore
          name: peer2-adminkey
        - mountPath: /fabric/config/crypto/org2/msp/cacerts
          name: peer2-cacert
        # Org3 MSP
        - mountPath: /fabric/config/crypto/org3/msp/admincerts
          name: peer3-admincert
        - mountPath: /fabric/config/crypto/org3/msp/signcerts
          name: peer3-admin-signcert
        - mountPath: /fabric/config/crypto/org3/msp/keystore
          name: peer3-adminkey
        - mountPath: /fabric/config/crypto/org3/msp/cacerts
          name: peer3-cacert
        # Channel artifacts
        - mountPath: /fabric/config/channel-artifacts
          name: artifacts
        # Docker socket
        - mountPath: /host/var/run/docker.sock
          name: dockersocket
  volumes:
    # Peer1 admin credentials
    - name: peer1-admincert
      secret:
        secretName: hlf--peer1-admincert
    - name: peer1-admin-signcert
      secret:
        secretName: hlf--peer1-admincert
    - name: peer1-adminkey
      secret:
        secretName: hlf--peer1-adminkey
    - name: peer1-cacert
      secret:
        secretName: hlf--peer1-cacert
    # Peer2 admin credentials
    - name: peer2-admincert
      secret:
        secretName: hlf--peer2-admincert
    - name: peer2-admin-signcert
      secret:
        secretName: hlf--peer2-admincert
    - name: peer2-adminkey
      secret:
        secretName: hlf--peer2-adminkey
    - name: peer2-cacert
      secret:
        secretName: hlf--peer2-cacert
    # Peer3 admin credentials
    - name: peer3-admincert
      secret:
        secretName: hlf--peer3-admincert
    - name: peer3-admin-signcert
      secret:
        secretName: hlf--peer3-admincert
    - name: peer3-adminkey
      secret:
        secretName: hlf--peer3-adminkey
    - name: peer3-cacert
      secret:
        secretName: hlf--peer3-cacert
    # Channel artifacts (genesis block, channel tx, anchor update txs)
    - name: artifacts
      secret:
        secretName: hlf--artifacts
    # Docker socket
    - name: dockersocket
      hostPath:
        path: /var/run/docker.sock
