network/orderer2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ord2-hlf-ord
  namespace: orderers
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ord2-hlf-ord
    spec:
      containers:

        - name: ord2-hlf-ord
          image: hyperledger/fabric-orderer:1.4.3
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "orderer"]
          volumeMounts:
            # MSP + TLS
            - mountPath: /etc/hyperledger/msp/orderer/
              name: crypto-config-2
            # Channel artifacts
            - mountPath: /etc/hyperledger/config/
              name: artifacts

      volumes:
        - name: crypto-config-2
          hostPath:
            path: /hosthome/prehi/thesis/network/crypto-config/ordererOrganizations/orderers.svc.cluster.local/orderers/ord2-hlf-ord.orderers.svc.cluster.local/
        # Channel artifacts (genesis block, channel tx, anchor update txs)
        - name: artifacts
          secret:
            secretName: hlf--artifacts
