network/peer1-org1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: peer1
  namespace: org1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: peer1
    spec:
      containers:
        - name: peer
          image: hyperledger/fabric-peer:1.4.3
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c", "peer node start"]
          volumeMounts:
            # Peer MSP + TLS
            - mountPath: /fabric/config/crypto/peer/
              name: crypto-config
            # Docker socket
            - mountPath: /host/var/run/docker.sock
              name: dockersocket
        - name: couchdb
          image: hyperledger/fabric-couchdb:amd64-0.4.14
      volumes:
        # Peer MSP + TLS
        - name: crypto-config
          hostPath:
            path: /hosthome/prehi/thesis/network/crypto-config/peerOrganizations/org1.svc.cluster.local/peers/peer1-hlf-peer.org1.svc.cluster.local
        # Docker socket
        - name: dockersocket
          hostPath:
            path: /var/run/docker.sock
