network/pumba_net_pod1.yaml
# If you are running Kubernetes >= 1.1.0. You can take advantage of DaemonSets to automatically deploy the Pumba on all your nodes.
# On 1.1.x you'll need to explicitly enable the DaemonSets extension, see http://kubernetes.io/v1.1/docs/admin/daemons.html#caveats.

# You'll then be able to deploy the DaemonSet with the command
# `kubectl create -f pumba_kube.yaml`

# If you are not running Kubernetes >= 1.1.0 or do not want to use DaemonSets, you can also run the Pumba as a regular docker container on each node you want to make chaos.
# `docker run -d -v /var/run/docker.sock:/var/run/docker.sock gaiaadm/pumba pumba --random --interval 3m kill --signal SIGKILL"`

apiVersion: v1
kind: Pod
metadata:
  name: pumba-1
  namespace: pumba
spec:
  nodeName: virt03
  restartPolicy: Never
  containers:
  - image: gaiaadm/pumba:master
    imagePullPolicy: IfNotPresent
    name: pumba
    args:
      - --log-level
      - "debug"
      - netem
      - --duration
      - "3m"
      - --tc-image
      - gaiadocker/iproute2
      - delay
      - --time
      - "10"
      - "re2:.*ord2-hlf-ord.*"
    resources:
      requests:
        cpu: 10m
        memory: 5M
      limits:
        cpu: 100m
        memory: 20M
    volumeMounts:
      - name: dockersocket
        mountPath: /var/run/docker.sock
  volumes:
    - hostPath:
        path: /var/run/docker.sock
      name: dockersocket
