network/pumba_network.yaml
# If you are running Kubernetes >= 1.1.0. You can take advantage of DaemonSets to automatically deploy the Pumba on all your nodes.
# On 1.1.x you'll need to explicitly enable the DaemonSets extension, see http://kubernetes.io/v1.1/docs/admin/daemons.html#caveats.

# You'll then be able to deploy the DaemonSet with the command
# `kubectl create -f pumba_kube.yaml`

# If you are not running Kubernetes >= 1.1.0 or do not want to use DaemonSets, you can also run the Pumba as a regular docker container on each node you want to make chaos.
# `docker run -d -v /var/run/docker.sock:/var/run/docker.sock gaiaadm/pumba pumba --random --interval 3m kill --signal SIGKILL"`

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: pumba
  namespace: pumba
spec:
  template:
    metadata:
      labels:
        app: pumba
        com.gaiaadm.pumba: "true" # prevent pumba from killing itself
      name: pumba
    spec:
      containers:
      - image: gaiaadm/pumba:master
        imagePullPolicy: Always
        name: pumba
        args:
          - --log-level
          - "debug"
          - netem
          - --duration
          - "5m"
          - --tc-image
          - gaiadocker/iproute2
          - delay
          - --time
          - "2000"
          - "re2:.*ord1-hlf-ord.*"
        resources:
          requests:
            cpu: 10m
            memory: 5M
          limits:
            cpu: 100m
            memory: 20M
        volumeMounts:
          - name: dockersocket
            mountPath: /var/run/docker.sock
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
      volumes:
        - hostPath:
            path: /var/run/docker.sock
          name: dockersocket
