network/peer1-exposed.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hlf-peer
    chart: hlf-peer-1.2.10
    heritage: Tiller
    release: peer1
  name: peer1-expose
  namespace: org1
spec:
  ports:
  - name: port-1
    port: 7051
    protocol: TCP
    targetPort: 7051
    nodePort: 30151
  - name: port-2
    port: 7053
    protocol: TCP
    targetPort: 7053
    nodePort: 30153
  selector:
    app: hlf-peer
    release: peer1
  type: NodePort
status:
  loadBalancer: {}
