network/peer1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peer1-hlf-peer
  namespace: org1
  labels:
    run: peer1-hlf-peer
spec:
  type: ClusterIP 
  selector:
    name: peer1
  ports:
  - protocol: TCP
    port: 7051
    name: grpcs
  - protocol: TCP
    port: 7053
    name: events
  - protocol: TCP
    port: 5984
    name: couchdb
